--- a/maringa.html
+++ b/maringa.html
@@ -22,8 +22,8 @@
         
                                 <div class="navbar-collapse collapse" id="navbarMenu">
                                         <div class="navbar-nav">
-                                                <a href="FilmesCartaz.html" class="nav-item nav-link active">Cinema Catedral</a>
-                                                <a href="maringa.html" class="nav-item nav-link">Maringá Park</a>
+                                                <a href="FilmesCartaz.html" class="nav-item nav-link">Cinema Catedral</a>
+                                                <a href="maringa.html" class="nav-item nav-link active">Maringá Park</a>
                                                 <a href="#" class="nav-item nav-link">Shopping Avenida</a>
                                                 <a href="#" class="nav-item nav-link">Catuaí Shopping</a>
                                         </div>
@@ -58,7 +58,7 @@
         
         <script type="text/javascript" src="assets/js/jquery-3.6.0.min.js" ></script>
         <script type="text/javascript" src="assets/js/bootstrap.bundle.min.js" ></script>
-        <script type="text/javascript" src="assets/js/script.js"></script>
+        <script type="text/javascript" src="assets/js/script2.js"></script>
 </body>
 
 
